Updated swagger docu
