# docu/swagger.yaml
@@ -139,10 +139,6 @@ paths:
                   type: string
                 numberOfEvents:
                   type: integer
-                productIdentificationAttributeName:
-                  type: string
-                productFamilyIdentificationAttributeName:
-                  type: string
                 timestampAttributeName:
                   type: string
                 eventQuery:
@@ -238,10 +234,6 @@ paths:
                   type: integer
                 name:
                   type: string
-                productIdentificationAttributeName:
-                  type: string
-                productFamilyIdentificationAttributeName:
-                  type: string
                 timestampAttributeName:
                   type: string
                 eventQuery:
@@ -281,10 +273,6 @@ paths:
               id:
                 type: integer
               name:
-                type: string
-              productIdentificationAttributeName:
-                type: string
-              productFamilyIdentificationAttributeName:
                 type: string
               timestampAttributeName:
                 type: string
@@ -332,6 +320,7 @@ paths:
                     type: array
                     items:
                       title: EventAttribute
+                      description: There must be two `EventAttributes` named "ProductId" (integer) and "ProductFamilyId" (string).
                       type: object
                       properties:
                         name:
